# SchemeInterpreter

./: .gitignore  scheme.cabal
app/: Environment.hs  Errors.hs  Evaluator.hs  Main.hs  Parser.hs  Repl.hs  Values.hs
app/Evaluator/: Primitives.hs
app/Evaluator/Primitives/: Bool.hs  Char.hs  List.hs  Number.hs  Operations.hs  String.hs  Symbol.hs
